Updated vectorial instructions to instrumetn